commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: dc073aa6fb1267af76a99e955711bbc96737370b
-ms.sourcegitcommit: 610936e4d3507f7f3d467ed7859ab9354ec158ba
+ms.openlocfilehash: 00949acff9908b4a75b6604396876b9c6c41cb3a
+ms.sourcegitcommit: 37186f76e4a50d7fb7389026dd0e5e234b51ebb2
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/25/2021
-ms.locfileid: "98751589"
+ms.lasthandoff: 02/04/2021
+ms.locfileid: "99541354"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -75,7 +75,7 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 </Project>
 ```
 
-## <a name="changes-to-no-locblazor-app-routing-logic-in-501-and-further-5x-releases-up-to-60"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1 und weiteren 5. x-Versionen bis zu 6,0
+## <a name="changes-to-blazor-app-routing-logic-in-501-and-further-5x-releases-up-to-60"></a>Änderungen an Blazor der APP-Routing Logik in 5.0.1 und weiteren 5. x-Versionen bis zu 6,0
 
 Die Berechnung der Routen Rangfolge wurde in der Patch-Version ASP.net Core 5.0.1 geändert. Dies kann sich auf Sie auswirken, wenn Sie Catch-All-Routen oder-Routen mit optionalen Parametern definiert haben.
 
@@ -108,7 +108,7 @@ Wenn `PreferExactMatches` auf `@true` festgelegt ist, bevorzugt die Routenzuordn
 >
 > Wenn .net 6 veröffentlicht wird, bevorzugt der Router immer exakte Übereinstimmungen, und die `PreferExactMatches` Option ist nicht verfügbar.
 
-## <a name="update-no-locblazor-webassembly-and-no-locblazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
+## <a name="update-blazor-webassembly-and-blazor-server-projects"></a>Aktualisieren Blazor WebAssembly und Blazor Server Projekte
 
 *Die Anleitungen in diesem Abschnitt gelten für beide Blazor Hostingmodelle. In den Abschnitten dieses Abschnitts finden Sie zusätzliche Anleitungen für das Hosting von Modellen und App-Typen. Wenden Sie die Anleitungen aus allen relevanten Abschnitten auf Ihre APP an.*
 
@@ -373,7 +373,7 @@ Wenn `PreferExactMatches` auf `@true` festgelegt ist, bevorzugt die Routenzuordn
     }
     ```
 
-## <a name="update-no-locblazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
+## <a name="update-blazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
 
 Befolgen Sie die Anweisungen im vorherigen Abschnitt zu [Updates Blazor WebAssembly und Blazor Server Projekten](#update-blazor-webassembly-and-blazor-server-projects) .
 
@@ -416,23 +416,44 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
     -<app>Loading...</app>
     +<div id="app">Loading...</div>
     ```
-    
-1. In `Program.Main` (`Program.cs`):
 
-   * Ändern Sie den Verweis auf das `<app>` Element in einen CSS-Selektor, indem Sie einen Hashwert hinzufügen `#` .
-   * Ändern `HttpClient` Sie die Registrierung in einen Bereich.
+1. `Program.Main` `Program.cs` Ändern Sie in () den Verweis auf das `<app>` Element in einen CSS-Selektor, indem Sie einen Hashwert hinzufügen `#` :
 
     ```diff
     -builder.RootComponents.Add<App>("app");
     +builder.RootComponents.Add<App>("#app");
-    
-    -builder.Services.AddTransient(sp => new HttpClient 
-    -    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
-    +builder.Services.AddScoped(sp => new HttpClient 
-    +    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
     ```
 
-### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a>Eigenständige Blazor WebAssembly App mit Microsoft-Konten
+1. `Program.Main` `Program.cs` Ändern Sie in () eine standardmäßige vorübergehende `HttpClient` Registrierung in den Bereich, falls vorhanden:
+
+   ```diff
+   -builder.Services.AddTransient(sp => new HttpClient 
+   -    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
+   +builder.Services.AddScoped(sp => new HttpClient 
+   +    { BaseAddress = new Uri(builder.HostEnvironment.BaseAddress) });
+   ```
+
+1. In `Program.Main` ( `Program.cs` ) der **`Client`** App gehosteter Blazor Lösungen:
+    
+   * Ersetzen Sie optional die `builder.HostEnvironment.BaseAddress` Basisadressen von Zeichen folgen Clients.
+   * Ändern Sie alle benannten vorübergehenden clientfactory-Registrierungen in den Gültigkeitsbereich.
+
+   ```diff
+   -builder.Services.AddHttpClient("{APP NAMESPACE}.ServerAPI", 
+   -    client => client.BaseAddress = new Uri("https://localhost:5001"))
+   -    .AddHttpMessageHandler<BaseAddressAuthorizationMessageHandler>();
+   -builder.Services.AddTransient(sp => sp.GetRequiredService<IHttpClientFactory>()
+   -    .CreateClient("{APP NAMESPACE}.ServerAPI"));
+   +builder.Services.AddHttpClient("{APP NAMESPACE}.ServerAPI", 
+   +    client => client.BaseAddress = new Uri(builder.HostEnvironment.BaseAddress))
+   +    .AddHttpMessageHandler<BaseAddressAuthorizationMessageHandler>();
+   +builder.Services.AddScoped(sp => sp.GetRequiredService<IHttpClientFactory>()
+   +    .CreateClient("{APP NAMESPACE}.ServerAPI"));
+    ```
+    
+   Im vorangehenden Code ist der `{APP NAMESPACE}` Platzhalter der APP-Namespace.
+
+### <a name="standalone-blazor-webassembly-app-with-microsoft-accounts"></a>Eigenständige Blazor WebAssembly App mit Microsoft-Konten
 
 Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
 
@@ -453,7 +474,7 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-microsoft-accounts>.
 
-### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)
+### <a name="standalone-blazor-webassembly-app-with-azure-active-directory-aad"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)
 
 Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
 
@@ -474,7 +495,7 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
   
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory>.
 
-### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad-b2c"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD) B2C
+### <a name="standalone-blazor-webassembly-app-with-azure-active-directory-aad-b2c"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD) B2C
 
 Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
 
@@ -495,7 +516,7 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.
 
-### <a name="hosted-no-locblazor-webassembly-app-with-azure-active-directory-aad-or-aad-b2c"></a>Gehostete Blazor WebAssembly App mit Azure Active Directory (AAD) oder Aad B2C
+### <a name="hosted-blazor-webassembly-app-with-azure-active-directory-aad-or-aad-b2c"></a>Gehostete Blazor WebAssembly App mit Azure Active Directory (AAD) oder Aad B2C
 
 Befolgen Sie die Anweisungen in den vorherigen Abschnitten [Update Blazor WebAssembly und Blazor Server Projekte](#update-blazor-webassembly-and-blazor-server-projects) und [Update Blazor WebAssembly Projekte](#update-blazor-webassembly-projects) .
 
@@ -507,12 +528,12 @@ Auf dem *`Client`* Blatt Azure-Portal App-Registrierungs **Authentifizierung** :
   1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
   1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie in folgenden Quellen:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
 
-### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a>Aktualisieren des Server Projekts einer gehosteten Blazor Lösung
+### <a name="update-the-server-project-of-a-hosted-blazor-solution"></a>Aktualisieren des Server Projekts einer gehosteten Blazor Lösung
 
 Befolgen Sie die Anweisungen in den vorangehenden Abschnitten:
 
@@ -555,7 +576,7 @@ Bestimmen Sie für die vorangehenden Paket Verweise die Paketversionen für die 
 > <Project Sdk="Microsoft.NET.Sdk.Web">
 > ```
 
-Weitere Informationen finden Sie unter
+Weitere Informationen finden Sie in folgenden Quellen:
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -605,7 +626,7 @@ So beheben Sie den Fehler
 1. Greifen Sie im Azure-Portal auf das [Manifest der App](/azure/active-directory/develop/reference-app-manifest) zu.
 1. Legen Sie das Attribut [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) auf `null` oder `true` fest.
 
-## <a name="update-a-no-locblazor-progressive-web-application-pwa"></a>Aktualisieren einer Blazor progressiven Webanwendung (PWA)
+## <a name="update-a-blazor-progressive-web-application-pwa"></a>Aktualisieren einer Blazor progressiven Webanwendung (PWA)
 
 Fügen Sie der Projektdatei der PWA-App Folgendes Element hinzu:
 
@@ -616,7 +637,7 @@ Fügen Sie der Projektdatei der PWA-App Folgendes Element hinzu:
 </ItemGroup>
 ```
 
-## <a name="update-no-locrazor-class-libraries-rcls"></a>Aktualisieren von Razor Klassenbibliotheken (rcls)
+## <a name="update-razor-class-libraries-rcls"></a>Aktualisieren von Razor Klassenbibliotheken (rcls)
 
 Migrieren Sie Razor Klassenbibliotheken (rcls), um neue APIs oder Features zu nutzen, die als Teil von ASP.net Core 5,0 eingeführt werden. 
 
@@ -676,7 +697,7 @@ Aktualisieren Sie die *dockerfile* `FROM` -Anweisungen und-Skripts für apps, di
 
 Im Rahmen der Umstellung auf ".net" als Produktname wurden die Docker-Images aus den `mcr.microsoft.com/dotnet/core` Depots in verschoben `mcr.microsoft.com/dotnet` . Weitere Informationen finden Sie unter [dotnet/dotnet-docker # 1939](https://github.com/dotnet/dotnet-docker/issues/1939).
 
-## <a name="model-binding-changes-in-aspnet-core-mvc-and-no-locrazor-pages"></a>Änderungen an der Modell Bindung in ASP.net Core MVC und Razor Seiten
+## <a name="model-binding-changes-in-aspnet-core-mvc-and-razor-pages"></a>Änderungen an der Modell Bindung in ASP.net Core MVC und Razor Seiten
 
 ### <a name="datetime-values-are-model-bound-as-utc-times"></a>DateTime-Werte sind als UTC-Zeitmodell gebunden.
 
