commit translated contents

--- a/aspnetcore/whats-new/2020-10.md
+++ b/aspnetcore/whats-new/2020-10.md
@@ -2,12 +2,12 @@
 title: 'ASP.net Core docs: Neuerungen beim 1. Oktober 2020 bis zum 31. Oktober 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. Oktober 2020 bis zum 31. Oktober 2020.
 ms.date: 11/02/2020
-ms.openlocfilehash: f7fc2c75db86aa1076fb826fefd40b27aa810ce0
-ms.sourcegitcommit: d64bf0cbe763beda22a7728c7f10d07fc5e19262
+ms.openlocfilehash: 293559d7f9ed305a7a64c0d438261967b273fb84
+ms.sourcegitcommit: 20a41c8e40a2e69e99291e2fe18caa04c02e7109
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/03/2020
-ms.locfileid: "93239384"
+ms.lasthandoff: 02/05/2021
+ms.locfileid: "99578385"
 ---
 # <a name="aspnet-core-docs-whats-new-for-october-1-2020---october-31-2020"></a>ASP.net Core docs: Neuerungen beim 1. Oktober 2020 bis zum 31. Oktober 2020
 
@@ -59,7 +59,7 @@ Willkommen bei den Neuerungen in den ASP.net Core docs vom 1. Oktober 2020 bis z
 - <xref:host-and-deploy/aspnet-core-module> -Umstrukturierung für IIS-Dokumente
 - <xref:host-and-deploy/iis/index> -Umstrukturierung für IIS-Dokumente
 
-## <a name="release-notes"></a>Anmerkungen zu dieser Version
+## <a name="release-notes"></a>Versionshinweise
 
 ### <a name="new-articles"></a>Neue Artikel
 
@@ -81,13 +81,13 @@ Willkommen bei den Neuerungen in den ASP.net Core docs vom 1. Oktober 2020 bis z
 
 - <xref:signalr/scale> -Verbessern von signalr nginx-Einstellungen
 
-## <a name="tutorials"></a>Lernprogramme
+## <a name="tutorials"></a>Tutorials
 
 ### <a name="updated-articles"></a>Aktualisierte Artikel
 
-- <xref:tutorials/signalr-blazor-webassembly> -Aktualisieren von blazor Webassembly mit signalr-Tutorial für ASP.net Core 5,0
+- <xref:tutorials/signalr-blazor> -Aktualisieren von blazor Webassembly mit signalr-Tutorial für ASP.net Core 5,0
 
-## <a name="community-contributors"></a>Mitwirkende an der Community
+## <a name="community-contributors"></a>Beitragende aus der Community
 
 Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen. Vielen Dank! Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.
 
