--- a/aspnetcore/whats-new/2020-12.md
+++ b/aspnetcore/whats-new/2020-12.md
@@ -2,12 +2,12 @@
 title: 'ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. Dezember 2020 bis 31. Dezember 2020.
 ms.date: 01/04/2021
-ms.openlocfilehash: bb9894620ee8eddc1ca52250bd1a1e6b971f2fe2
-ms.sourcegitcommit: b64c44ba5e3abb4ad4d50de93b7e282bf0f251e4
+ms.openlocfilehash: 1d100fd2e93e70b4073b28f8840dffc5ef6c5eed
+ms.sourcegitcommit: 20a41c8e40a2e69e99291e2fe18caa04c02e7109
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 01/07/2021
-ms.locfileid: "97972040"
+ms.lasthandoff: 02/05/2021
+ms.locfileid: "99578372"
 ---
 # <a name="aspnet-core-docs-whats-new-for-december-1-2020---december-31-2020"></a>ASP.net Core docs: Neuerungen am 1. Dezember 2020 bis 31. Dezember 2020
 
@@ -29,9 +29,9 @@ Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. Dezember 2020 b
 
 ### <a name="updated-articles"></a>Aktualisierte Artikel
 
-- <xref:tutorials/signalr-blazor-webassembly> -Dokument Verwendung des System. Text. Encodings. Web-Pakets in ASP.net Core 3,1
+- <xref:tutorials/signalr-blazor> -Dokument Verwendung des System. Text. Encodings. Web-Pakets in ASP.net Core 3,1
 
-## <a name="community-contributors"></a>Mitwirkende in der Community
+## <a name="community-contributors"></a>Beitragende aus der Community
 
 Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen. Vielen Dank! Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.
 
